--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,13 +3,12 @@
 
 body {
   background: #e2ebf3;
+
 }
-nav {
-  margin: 4%;
+ul, li {
+  list-style: none;
 }
-a {
-  margin: 3%;
-}
-.inject {
-  margin-left: 7%;
+section {
+  width: 80%;
+  margin: 0 auto;
 }
